# parasel

./: .gitignore  README.md  USAGE.md  pyproject.toml  pytest.ini  requirements.txt
docs/: architecture.md  by_args_keys_guide.md  by_args_keys_summary.md
examples/: __init__.py  api_example.py  by_args_keys_example.py  openrouter_example.py  search_example.py  simple_example.py
parasel/: __init__.py
parasel-skill/: README.md  SKILL.md
parasel-skill/examples/: README.md  fastapi_deploy.py  multi_language.py  simple_pipeline.py  web_recommend.py
parasel-skill/references/: api-reference.md  core-concepts.md  patterns.md  troubleshooting.md  usage-guide.md
parasel/api/: __init__.py  fastapi_app.py
parasel/core/: __init__.py  context.py  executor.py  module_adapter.py  node.py
parasel/registry/: __init__.py  schemas.py  task_registry.py
